# mail-mcp

./: .gitignore  CLAUDE.md  Dockerfile  Makefile  README.adoc  crontab  docker-compose.yml  maven-jira-projects.toml  mcp-config.json  pyproject.toml  requests.http  test_mcp_tools.py
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: analysis-scripts.adoc  antora.yml  data-management.adoc  development.adoc  docker.adoc  index.adoc  mcp-server.adoc  roadmap.adoc  testing-mcp.adoc
docs/adr/: 0001-storage-and-access-strategy.adoc  0002-technology-stack.adoc  0003-archive-url-resolution.adoc
docs/modules/ROOT/: nav.adoc
docs/modules/ROOT/pages/: index.adoc
docs/modules/ROOT/partials/: available-tools.adoc  mcp-config.adoc  prerequisites.adoc  quick-start.adoc
docs/modules/development/: nav.adoc
docs/modules/development/pages/: analysis-scripts.adoc  development.adoc  roadmap.adoc  testing-mcp.adoc
docs/modules/development/pages/adr/: 0001-storage-and-access-strategy.adoc  0002-technology-stack.adoc  0003-archive-url-resolution.adoc  0004-lenient-mypy-configuration.adoc
docs/modules/usage/: nav.adoc
docs/modules/usage/pages/: data-management.adoc  docker.adoc  mcp-server.adoc
scripts/: analyze_github_refs.py  query_via_mcp.py
src/mail_mcp/: __init__.py  config.py  logging_config.py  ponymail.py
src/mail_mcp/cli/: __init__.py  index_mbox.py  retrieve_mbox.py  update_current_month.py
src/mail_mcp/extractors/: __init__.py  metadata.py  quotes.py
src/mail_mcp/indexing/: __init__.py  indexer.py
src/mail_mcp/parsers/: __init__.py  email_parser.py  mbox_parser.py
src/mail_mcp/server/: __init__.py  main.py  middleware.py  server.py  tools.py
src/mail_mcp/storage/: __init__.py  elasticsearch.py  schema.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_elasticsearch.py  test_http_transport.py  test_mcp_tools.py
tests/unit/: __init__.py  test_archive_resolution.py  test_metadata_extractor.py  test_tools_archive.py
