#
# Copyright 2025 The Apache Software Foundation
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mail-mcp"
version = "0.1.0"
description = "MCP server for accessing Apache Maven mailing list archives"
readme = {file = "README.adoc", content-type = "text/plain"}
requires-python = ">=3.11,<4.0"
license = {text = "Apache-2.0"}
authors = [
    {name = "The Apache Software Foundation", email = "dev@maven.apache.org"}
]
keywords = ["mcp", "maven", "mailing-list", "email", "archive"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "mcp>=0.9.0",
    "elasticsearch (>=8.11.0,<9.0.0)",
    "httpx>=0.27.0",
    "pydantic-settings>=2.0.0",
    "structlog>=24.1.0",
    "aiohttp (>=3.13.0,<4.0.0)",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "testcontainers>=4.0.0",
]

[project.scripts]
retrieve-mbox = "mail_mcp.cli.retrieve_mbox:main"
index-mbox = "mail_mcp.cli.index_mbox:main"
update-current-month = "mail_mcp.cli.update_current_month:main"
maven-mail-mcp = "mail_mcp.server.main:run_server"

[tool.hatch.build.targets.wheel]
packages = ["src/mail_mcp"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "S", "B", "A"]
ignore = ["S603", "S607"]  # Allow subprocess calls in retrieve_mbox

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
